# game-of-evolution

./: .gitignore  Dockerfile  README.md  config.ini
.devcontainer/: devcontainer.json
logs/: epoch-log.txt
src/: AlgorithmHelpers.cpp  AlgorithmHelpers.h  Analytics.cpp  Analytics.h  App.cpp  App.h  Backend.cpp  Backend.h  BasicTypes.cpp  BasicTypes.h  CMakeLists.txt  GenerationGenerator.cpp  GenerationGenerator.h  Genome.cpp  Genome.h  Grid.cpp  Grid.h  Parameters.cpp  Parameters.h  Peep.cpp  Peep.h  PeepsPool.cpp  PeepsPool.h  PheromoneSignals.cpp  PheromoneSignals.h  QMLChallengeItems.h  QMLInterface.cpp  QMLInterface.h  Random.cpp  Random.h  SensorsActions.cpp  SensorsActions.h  SysStateMachine.cpp  SysStateMachine.h  main.cpp  main.qrc
src/Barriers/: CircleBarrier.cpp  CircleBarrier.h  RectangleBarrier.cpp  RectangleBarrier.h  iBarriers.cpp  iBarriers.h
src/Challenges/: AgainstAnyWall.cpp  AgainstAnyWall.h  Altruism.cpp  Altruism.h  AltruismSacrifice.cpp  AltruismSacrifice.h  CenterSparsed.cpp  CenterSparsed.h  CenterUnweighted.cpp  CenterUnweighted.h  CenterWeighted.cpp  CenterWeighted.h  Circle.cpp  Circle.h  CircularSequence.cpp  CircularSequence.h  Corner.cpp  Corner.h  CornerWeighted.cpp  CornerWeighted.h  EastWestEighths.cpp  EastWestEighths.h  LeftEighth.cpp  LeftEighth.h  LocationSequence.cpp  LocationSequence.h  MigrateDistance.cpp  MigrateDistance.h  NearBarrier.cpp  NearBarrier.h  NeighborCount.cpp  NeighborCount.h  Pairs.cpp  Pairs.h  RadioactiveWalls.cpp  RadioactiveWalls.h  RightHalf.cpp  RightHalf.h  RightQuarter.cpp  RightQuarter.h  (+4 more)
src/qml/: Analytics.qml  Canvas2DType.qml  ChartsConnector.cpp  ChartsConnector.h  Circle.qml  Details.qml  Peep.qml  Rect.qml  main.qml
